--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
@@ -59,7 +59,7 @@
                         <label>id</label>
                       </td>
                       <td>
-                        <p>Component id, can be used as return value in events handling</p>
+                        <p>Component id, can be used as a return value in events handling</p>
                       </td>
                       <td>
                         <p>string</p>
