--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -37,7 +37,7 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" [imgSrc]="'./assets/examples/originals/img_11.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" loadingColor="#1788cf" [imgSrc]="'./assets/examples/originals/img_11.jpeg'">
             <img src="./assets/examples/thumbs/img_11.jpeg" />
           </ngx-floating-img>
         </div>
@@ -50,12 +50,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="70" overlayColor="#101010" [overlayAnimation]="false" [imgSrc]="'./assets/examples/originals/img_8.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="70" overlayColor="#101010" [overlayAnimation]="false" loadingColor="#0d140d" [imgSrc]="'./assets/examples/originals/img_8.jpeg'">
             <img src="./assets/examples/thumbs/img_8.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [vpPadding]="0" [imgAnimationSpeed]="170" thumbBgColor="#ff6e76" [imgSrc]="'./assets/examples/originals/img_24.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [vpPadding]="0" [imgAnimationSpeed]="170" thumbBgColor="#ff6e76" loadingColor="#ff5425" [imgSrc]="'./assets/examples/originals/img_24.jpeg'">
             <img src="./assets/examples/thumbs/img_24.jpeg" />
           </ngx-floating-img>
         </div>
@@ -89,12 +89,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#fede00" [imgSrc]="'./assets/examples/originals/img_20.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#fede00" loadingColor="rgb(255, 110, 196)" [imgSrc]="'./assets/examples/originals/img_20.jpeg'">
             <img src="./assets/examples/thumbs/img_20.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100"  [overlayAnimation]="false" thumbBgColor="#ff84a7" [imgSrc]="'./assets/examples/originals/img_1.jpg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100"  [overlayAnimation]="false" thumbBgColor="#ff84a7" loadingColor="#182443" [imgSrc]="'./assets/examples/originals/img_1.jpg'">
             <img src="./assets/examples/thumbs/img_1.jpg" />
           </ngx-floating-img>
         </div>
