Tester site fixes

--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.scss
@@ -19,7 +19,7 @@
 
     #default-options-container {
         .floating-img-options {
-            margin-bottom: $main-small-padding;
+            margin: $main-small-padding 0;
         }
     }
 
