--- a/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
+++ b/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
@@ -1,5 +1,5 @@
 <div>
-  <div>
+  <div class="code-generator-wrapper">
     <span class="ele-tag">&lt;ngx-floating-img</span>
     <span class="ele-attr"> [imgWidth]</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{imgWidth}}"</span>
     <span class="ele-attr"> [imgHeight]</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{imgHeight}}"</span>
