--- a/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
+++ b/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
@@ -19,7 +19,7 @@
     <span class="ele-tag">&gt;</span>
   </div>
   <div class="inner-ele">
-    <span class="ele-tag">&lt;img</span><span class="ele-attr"> src</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{thumbSrc}}"</span><span class="ele-tag">&gt;&lt;/img&gt;</span>
+    <span class="ele-tag">&lt;img</span><span class="ele-attr"> src</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{thumbSrc}}"</span><span class="ele-tag">/&gt;</span>
   </div>
   <div><span class="ele-tag">&lt;/ngx-floating-img&gt;</span></div>
 </div>
