Improve image closing animation

--- a/projects/ngx-floating-img-tester/src/app/features/examples/examples.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/examples/examples.component.html
@@ -3,28 +3,28 @@
     <fit-section title="simple example">
       <div class="example-wrapper">
         <div class="example-content ngx-4-img">
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_1" imgSrc="./assets/examples/originals/img_18.jpeg">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_1" imgSrc="./assets/examples/full/img_18.jpg">
             <img src="./assets/examples/thumbs/img_18.jpeg" />
           </ngx-floating-img>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_2" imgSrc="./assets/examples/originals/img_8.jpeg">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_2" imgSrc="./assets/examples/full/img_8.jpg">
             <img src="./assets/examples/thumbs/img_8.jpeg" />
           </ngx-floating-img>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_3" imgSrc="./assets/examples/originals/img_21.jpeg">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_3" imgSrc="./assets/examples/full/img_21.jpg">
             <img src="./assets/examples/thumbs/img_21.jpeg" />
           </ngx-floating-img>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_4" imgSrc="./assets/examples/originals/img_3.jpeg">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" title="img_4" imgSrc="./assets/examples/full/img_3.jpg">
             <img src="./assets/examples/thumbs/img_3.jpeg" />
           </ngx-floating-img>
         </div>
         <div class="example-code">
             <code>
-              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./originals/img_1.jpeg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
+              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./full/img_1.jpg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
               <br>
-              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./originals/img_2.jpeg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
+              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./full/img_2.jpg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
               <br>
-              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./originals/img_3.jpeg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
+              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./full/img_3.jpg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
               <br>
-              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./originals/img_4.jpeg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
+              <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" imgSrc="./full/img_4.jpg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
             </code>
         </div>
       </div>
@@ -33,28 +33,28 @@
     <fit-section title="viewport padding example">
         <div class="example-wrapper">
           <div class="example-content ngx-4-img">
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" title="img_1" imgSrc="./assets/examples/originals/img_13.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" title="img_1" imgSrc="./assets/examples/full/img_13.jpg">
               <img src="./assets/examples/thumbs/img_13.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="200" title="img_2" imgSrc="./assets/examples/originals/img_14.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="200" title="img_2" imgSrc="./assets/examples/full/img_14.jpg">
               <img src="./assets/examples/thumbs/img_14.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" title="img_3" imgSrc="./assets/examples/originals/img_2.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" title="img_3" imgSrc="./assets/examples/full/img_2.jpg">
               <img src="./assets/examples/thumbs/img_2.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" title="img_4" imgSrc="./assets/examples/originals/img_9.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" title="img_4" imgSrc="./assets/examples/full/img_9.jpg">
               <img src="./assets/examples/thumbs/img_9.jpeg" />
             </ngx-floating-img>
           </div>
           <div class="example-code">
               <code>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" imgSrc="./originals/img_1.jpeg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" imgSrc="./full/img_1.jpg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="200" imgSrc="./originals/img_2.jpeg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="200" imgSrc="./full/img_2.jpg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" imgSrc="./originals/img_3.jpeg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" imgSrc="./full/img_3.jpg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" imgSrc="./originals/img_4.jpeg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" imgSrc="./full/img_4.jpg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
               </code>
           </div>
         </div>
@@ -63,28 +63,28 @@
       <fit-section title="overlay example">
         <div class="example-wrapper">
           <div class="example-content ngx-4-img">
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#080e24" [overlayAnimation]="false" title="img_1" imgSrc="./assets/examples/originals/img_1.jpg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#080e24" [overlayAnimation]="false" title="img_1" imgSrc="./assets/examples/full/img_1.jpg">
               <img src="./assets/examples/thumbs/img_1.jpg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="rgb(222, 91, 1, 0.8)" title="img_2" imgSrc="./assets/examples/originals/img_15.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="rgb(222, 91, 1, 0.8)" title="img_2" imgSrc="./assets/examples/full/img_15.jpg">
               <img src="./assets/examples/thumbs/img_15.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#87b3fe" title="img_3" imgSrc="./assets/examples/originals/img_16.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#87b3fe" title="img_3" imgSrc="./assets/examples/full/img_16.jpg">
               <img src="./assets/examples/thumbs/img_16.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#ce9a7c" [overlayDismiss]="false" title="img_4" imgSrc="./assets/examples/originals/img_12.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#ce9a7c" [overlayDismiss]="false" title="img_4" imgSrc="./assets/examples/full/img_12.jpg">
               <img src="./assets/examples/thumbs/img_12.jpeg" />
             </ngx-floating-img>
           </div>
           <div class="example-code">
               <code>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#080e24" [overlayAnimation]="false" imgSrc="./originals/img_1.jpeg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#080e24" [overlayAnimation]="false" imgSrc="./full/img_1.jpg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="rgb(222, 91, 1, 0.8)" imgSrc="./originals/img_2.jpeg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="rgb(222, 91, 1, 0.8)" imgSrc="./full/img_2.jpg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#87b3fe" imgSrc="./originals/img_3.jpeg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50" overlayColor="#87b3fe" imgSrc="./full/img_3.jpg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50"  overlayColor="#ce9a7c" [overlayDismiss]="false" imgSrc="./originals/img_4.jpeg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="50"  overlayColor="#ce9a7c" [overlayDismiss]="false" imgSrc="./full/img_4.jpg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
               </code>
           </div>
         </div>
@@ -93,28 +93,28 @@
       <fit-section title="Image animation, speed example">
         <div class="example-wrapper">
           <div class="example-content ngx-4-img">
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [overlayAnimation]="false" imgAnimationType="linear" title="img_1" imgSrc="./assets/examples/originals/img_6.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [overlayAnimation]="false" imgAnimationType="linear" title="img_1" imgSrc="./assets/examples/full/img_6.jpg">
               <img src="./assets/examples/thumbs/img_6.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" imgAnimationType="ease-in" [imgAnimationSpeed]="300" title="img_2" imgSrc="./assets/examples/originals/img_10.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" imgAnimationType="ease-in" [imgAnimationSpeed]="300" title="img_2" imgSrc="./assets/examples/full/img_10.jpg">
               <img src="./assets/examples/thumbs/img_10.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" [imgAnimationSpeed]="500" title="img_3" imgSrc="./assets/examples/originals/img_18.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" [imgAnimationSpeed]="500" title="img_3" imgSrc="./assets/examples/full/img_18.jpg">
               <img src="./assets/examples/thumbs/img_18.jpeg" />
             </ngx-floating-img>
-            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [imgAnimationSpeed]="0" title="img_4" imgSrc="./assets/examples/originals/img_4.jpeg">
+            <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [imgAnimationSpeed]="0" title="img_4" imgSrc="./assets/examples/full/img_4.jpg">
               <img src="./assets/examples/thumbs/img_4.jpeg" />
             </ngx-floating-img>
           </div>
           <div class="example-code">
               <code>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [overlayAnimation]="false" imgAnimationType="linear" imgSrc="./originals/img_1.jpeg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [overlayAnimation]="false" imgAnimationType="linear" imgSrc="./full/img_1.jpg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" imgAnimationType="ease-in" [imgAnimationSpeed]="300" imgSrc="./originals/img_2.jpeg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" imgAnimationType="ease-in" [imgAnimationSpeed]="300" imgSrc="./full/img_2.jpg" thumbSrc="./thumbs/img_2.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" [imgAnimationSpeed]="500" imgSrc="./originals/img_3.jpeg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" [imgAnimationSpeed]="500" imgSrc="./full/img_3.jpg" thumbSrc="./thumbs/img_3.jpeg"></fit-ngx-code-generator>
                 <br>
-                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [imgAnimationSpeed]="0" imgSrc="./originals/img_4.jpeg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
+                <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="1280" overlayColor="#000" [imgAnimationSpeed]="0" imgSrc="./full/img_4.jpg" thumbSrc="./thumbs/img_4.jpeg"></fit-ngx-code-generator>
               </code>
           </div>
         </div>
@@ -155,7 +155,7 @@
           <div class="example-content ngx-1-img">
             <ngx-floating-img [imgWidth]="1920" [imgHeight]="787" overlayColor="#fff" [overlayAnimation]="false" (beforeShow)="showMessage('beforeShow event')" 
               (afterShow)="showMessage('afterShow event')" (onFullImgLoad)="showMessage('onFullImgLoad event')" (beforeClose)="showMessage('beforeClose event')" 
-              (afterClose)="showMessage('afterClose event')" title="img_1" imgSrc="./assets/examples/originals/img_25.jpeg">
+              (afterClose)="showMessage('afterClose event')" title="img_1" imgSrc="./assets/examples/full/img_25.jpg">
               <img src="./assets/examples/thumbs/img_25.jpeg" />
             </ngx-floating-img>
           </div>
@@ -164,7 +164,7 @@
               <code>
                 <fit-ngx-code-generator [imgWidth]="1920" [imgHeight]="787" overlayColor="#fff" [overlayAnimation]="false" beforeShow="showMessage('beforeShow event')" 
                 afterShow="showMessage('afterShow event')" onFullImgLoad="showMessage('onFullImgLoad event')" beforeClose="showMessage('beforeClose event')" 
-                afterClose="showMessage('afterClose event')" imgSrc="./originals/img_1.jpeg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
+                afterClose="showMessage('afterClose event')" imgSrc="./full/img_1.jpg" thumbSrc="./thumbs/img_1.jpeg"></fit-ngx-code-generator>
               </code>
           </div>
         </div>
