--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -37,12 +37,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" loadingColor="#1788cf" [imgSrc]="'./assets/examples/originals/img_11.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" loadingColor="#1788cf" [imgSrc]="'./assets/examples/full/img_11.jpg'">
             <img src="./assets/examples/thumbs/img_11.jpeg" />
           </ngx-floating-img>
         </div>
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="70" thumbBgColor="#5a6367" overlayColor="rgba(0, 0, 0, 0.6)" [imgSrc]="'./assets/examples/originals/img_13.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="70" thumbBgColor="#5a6367" overlayColor="rgba(0, 0, 0, 0.6)" [imgSrc]="'./assets/examples/full/img_13.jpg'">
             <img src="./assets/examples/thumbs/img_13.jpeg" />
           </ngx-floating-img>
         </div>
@@ -50,12 +50,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="70" overlayColor="#101010" [overlayAnimation]="false" loadingColor="#0d140d" [imgSrc]="'./assets/examples/originals/img_8.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="70" overlayColor="#101010" [overlayAnimation]="false" loadingColor="#0d140d" [imgSrc]="'./assets/examples/full/img_8.jpg'">
             <img src="./assets/examples/thumbs/img_8.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [vpPadding]="0" [imgAnimationSpeed]="170" thumbBgColor="#ff6e76" loadingColor="#ff5425" [imgSrc]="'./assets/examples/originals/img_24.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" [vpPadding]="0" [imgAnimationSpeed]="170" thumbBgColor="#ff6e76" loadingColor="#ff5425" [imgSrc]="'./assets/examples/full/img_24.jpg'">
             <img src="./assets/examples/thumbs/img_24.jpeg" />
           </ngx-floating-img>
         </div>
@@ -63,12 +63,12 @@
       
       <div class="img-wrapper">
         <div>
-            <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#202020" thumbBgColor="#5e5e68" [imgSrc]="'./assets/examples/originals/img_5.jpeg'">
+            <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#202020" thumbBgColor="#5e5e68" [imgSrc]="'./assets/examples/full/img_5.jpg'">
               <img src="./assets/examples/thumbs/img_5.jpeg" />
             </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" thumbBgColor="#6ba900" [imgSrc]="'./assets/examples/originals/img_2.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="0" thumbBgColor="#6ba900" [imgSrc]="'./assets/examples/full/img_2.jpg'">
             <img src="./assets/examples/thumbs/img_2.jpeg" />
           </ngx-floating-img>
         </div> 
@@ -76,12 +76,12 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" thumbBgColor="#fecd7e" [imgSrc]="'./assets/examples/originals/img_3.jpeg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" thumbBgColor="#fecd7e" [imgSrc]="'./assets/examples/full/img_3.jpg'">
             <img src="./assets/examples/thumbs/img_3.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#fff" thumbBgColor="#687d82" [overlayAnimation]="false" [imgSrc]="'./assets/examples/originals/img_19.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#fff" thumbBgColor="#687d82" [overlayAnimation]="false" [imgSrc]="'./assets/examples/full/img_19.jpg'">
             <img src="./assets/examples/thumbs/img_19.jpeg" />
           </ngx-floating-img>
         </div>
@@ -89,16 +89,29 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#fede00" loadingColor="rgb(255, 110, 196)" [imgSrc]="'./assets/examples/originals/img_20.jpeg'">
+          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#fede00" loadingColor="rgb(255, 110, 196)" [imgSrc]="'./assets/examples/full/img_20.jpg'">
             <img src="./assets/examples/thumbs/img_20.jpeg" />
           </ngx-floating-img>
         </div> 
         <div>
-          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100"  [overlayAnimation]="false" thumbBgColor="#ff84a7" loadingColor="#182443" [imgSrc]="'./assets/examples/originals/img_1.jpg'">
+          <ngx-floating-img [imgWidth]="1920" [imgHeight]="1280" [vpPadding]="100" [overlayAnimation]="false" thumbBgColor="#ff84a7" loadingColor="#182443" [imgSrc]="'./assets/examples/full/img_1.jpg'">
             <img src="./assets/examples/thumbs/img_1.jpg" />
           </ngx-floating-img>
         </div>
       </div>
+
+      <!-- <div class="img-wrapper-wide">
+        <div>
+          <ngx-floating-img [imgWidth]="2340" [imgHeight]="585" overlayColor="#fff" [vpPadding]="0" [overlayAnimation]="false" imgSrc="./assets/examples/full/img_30.jpg">
+            <img src="./assets/examples/thumbs/img_30.jpg" />
+          </ngx-floating-img>
+        </div> 
+        <div>
+          <ngx-floating-img [imgWidth]="2340" [imgHeight]="780" overlayColor="#fff" [vpPadding]="0" [overlayAnimation]="false" imgSrc="./assets/examples/full/img_31.jpg">
+            <img src="./assets/examples/thumbs/img_31.jpg" />
+          </ngx-floating-img>
+        </div>
+      </div> -->
 
       <div class="more-info-wrapper">
         <p>This example shows multiple options can be applied to ngx-floating-img component, <a routerLink="/examples">see all examples</a>
