working on disable scrolling

--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -63,7 +63,7 @@
       
       <div class="img-wrapper">
         <div>
-            <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" overlayColor="#202020" thumbBgColor="#5e5e68" [imgSrc]="'./assets/examples/full/img_5.jpg'">
+            <ngx-floating-img [disableScroll]="true" [imgWidth]="1280" [imgHeight]="1920" overlayColor="#202020" thumbBgColor="#5e5e68" [imgSrc]="'./assets/examples/full/img_5.jpg'">
               <img src="./assets/examples/thumbs/img_5.jpeg" />
             </ngx-floating-img>
         </div> 
