Improvements for mobile devices

--- a/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/home/home.component.html
@@ -37,7 +37,7 @@
       
       <div class="img-wrapper">
         <div>
-          <ngx-floating-img [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" loadingColor="#1788cf" [imgSrc]="'./assets/examples/full/img_11.jpg'">
+          <ngx-floating-img [disableScroll]="true" [imgWidth]="1280" [imgHeight]="1920" thumbBgColor="#6be3cd" overlayColor="rgba(255, 255, 255, 0.5)" loadingColor="#1788cf" [imgSrc]="'./assets/examples/full/img_11.jpg'">
             <img src="./assets/examples/thumbs/img_11.jpeg" />
           </ngx-floating-img>
         </div>
