--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.css
@@ -56,6 +56,14 @@ figure .fi-img-container.show-full-img {
 /* floating image wrapper */
 figure .fi-img-container.show-full-img .fi-img-wrapper {
     position: absolute;
+    transition-property: transform;
+    -webkit-transition-property: transform;
+    -moz-transition-property: transform;
+    -o-transition-property: transform;
+    transition-timing-function: linear;
+    -webkit-transition-timing-function: linear;
+    -moz-transition-timing-function: linear;
+    -o-transition-timing-function: linear;
 }
 
 /* floating image inner wrapper */
