--- a/projects/ngx-floating-img/src/lib/ngx-floating-img.component.html
+++ b/projects/ngx-floating-img/src/lib/ngx-floating-img.component.html
@@ -3,7 +3,7 @@
         <figure #imgFigure> 
             <div #imgContainer class="fi-img-container" [ngClass]="{'show-full-img': showFullImgTrigger}"  
                 [style.background-color]="isShowFullImgInProgress ? overlayColor : 'rgba(0,0,0,0)'" [ngStyle]="overlayTransition"  (click)="closeFullImg($event)">
-                <div #imgWrapper class="fi-img-wrapper" [ngStyle]="imgWrapperStyle">
+                <div #imgWrapper class="fi-img-wrapper" [ngStyle]="imgWrapperStyle" [style.transform]="imgWrapperTranslateY" [style.transition-duration.ms]="imgWrapperTransitionDurationNum">
                     <div #imgInnerWrapper class="fi-img-inner-wrapper" [ngClass]="{'fi-img-fully-loaded': showFullImgTrigger}" [ngStyle]="imgInnerWrapperTransition" 
                         (click)="showFullImg()">
                         <ng-content></ng-content>
